--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,165 +8,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
-    <script>
-        $(document).ready(function () {
-            getMessages();
-        })
-
-        function getMessages() {
-            $('#cards-box').empty();
-            $.ajax({
-                type: "GET",
-                url: "/api/memos",
-                data: {},
-                success: function (response) {
-                    for (let i = 0; i < response.length; i++) {
-                        let message = response[i];
-                        let id = message['id'];
-                        let username = message['username'];
-                        let contents = message['contents'];
-                        let modifiedAt = message['modifiedAt'];
-                        addHTML(id, username, contents, modifiedAt);
-                    }
-                }
-            });
-        }
-
-        function addHTML(id, username, contents, modifiedAt) {
-            let tempHtml = makeMessage(id, username, contents, modifiedAt);
-            $('#cards-box').append(tempHtml);
-        }
-
-        function makeMessage(id, username, contents, modifiedAt, i) {
-            return `<div class="card">
-                        <!-- date/username 영역 -->
-            <div class="metadata">
-            <div class="date">
-            ${modifiedAt}
-            </div>
-            <div id="${id}-username" class="username">
-            ${username}
-            </div>
-            </div>
-                <!-- contents 조회/수정 영역-->
-            <div class="contents">
-            <div id="${id}-contents" class="text">
-            ${contents}
-            </div>
-            <div id="${id}-editarea" class="edit">
-            <textarea id="${id}-textarea" class="te-edit" name="" id="" cols="30" rows="5"></textarea>
-            </div>
-            </div>
-                <!-- 버튼 영역-->
-            <div class="footer">
-            <img id="${id}-edit" class="icon-start-edit" src="images/edit.png" alt="" onclick="editPost('${id}')">
-            <img id="${id}-delete" class="icon-delete" src="images/delete.png" alt="" onclick="deleteOne('${id}')">
-            <img id="${id}-submit" class="icon-end-edit" src="images/done.png" alt="" onclick="submitEdit('${id}')">
-            </div>
-            </div>`;
-            }
-
-            function isValidContents(contents) {
-            if (contents == '') {
-            alert('내용을 입력해주세요');
-            return false;
-            }
-            if (contents.trim().length > 140) {
-            alert('공백 포함 140자 이하로 입력해주세요');
-            return false;
-            }
-            return true;
-            }
-
-            function genRandomName(length) {
-            let result = '';
-            let characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-            let charactersLength = characters.length;
-            for (let i = 0; i < length; i++) {
-            let number = Math.random() * charactersLength;
-            let index = Math.floor(number);
-            result += characters.charAt(index);
-            }
-            return result;
-            }
-
-            function writePost() {
-            let contents = $('#contents').val();
-
-            if (isValidContents(contents) == false) {
-            return;
-            }
-
-            let username = genRandomName(10);
-            let data = {'username': username, 'contents': contents};
-
-            $.ajax({
-            type: "POST",
-            url: "/api/memos",
-            contentType: "application/json",
-            data: JSON.stringify(data),
-            success: function (response) {
-            alert('메시지가 성공적으로 작성되었습니다.');
-            window.location.reload();
-            }
-            });
-            }
-
-            function editPost(id) {
-            showEdits(id);
-            let contents = $(`#${id}-contents`).text().trim();
-            $(`#${id}-textarea`).val(contents);
-            }
-
-            function showEdits(id) {
-            $(`#${id}-editarea`).show();
-            $(`#${id}-submit`).show();
-            $(`#${id}-delete`).show();
-
-            $(`#${id}-contents`).hide();
-            $(`#${id}-edit`).hide();
-            }
-
-            function hideEdits(id) {
-            $(`#${id}-editarea`).hide();
-            $(`#${id}-submit`).hide();
-            $(`#${id}-delete`).hide();
-
-            $(`#${id}-contents`).show();
-            $(`#${id}-edit`).show();
-            }
-
-            function submitEdit(id) {
-            let username = $(`#${id}-username`).text().trim();
-            let contents = $(`#${id}-textarea`).val().trim();
-            if (isValidContents(contents) == false) {
-            return;
-            }
-            let data = {'username': username, 'contents': contents};
-
-            $.ajax({
-            type: "PUT",
-            url: `/api/memos/${id}`,
-            contentType: "application/json",
-            data: JSON.stringify(data),
-            success: function (response) {
-            alert('메시지 변경에 성공하였습니다.');
-            window.location.reload();
-            }
-            });
-            }
-
-            function deleteOne(id) {
-            $.ajax({
-            type: "DELETE",
-            url: `/api/memos/${id}`,
-            success: function (response) {
-            alert('메시지 삭제에 성공하였습니다.');
-            window.location.reload();
-            }
-            })
-            }
-    </script>
 
     <style>
         @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
@@ -364,6 +205,115 @@
             margin-top: 12px;
         }
     </style>
+    <script>
+        //클라이언트의 입력내용을 확인함
+        function isValidContents(contents) {
+            if (contents == '') {
+                alert('내용을 입력해주세요');
+                return false;
+            }
+            if (contents.trim().length > 140) {
+                alert('공백 포함 140자 이하로 입력해주세요');
+                return false;
+            }
+            return true;
+        }
+
+        // 익명의 username 생성
+        function genRandomName(length) { // 길이값을 받아서 임의의 문자열 반환 length 가 12면 12개
+            let result = '';
+            let characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+            let charactersLength = characters.length;
+            for (let i = 0; i < length; i++) {
+                let number = Math.random() * charactersLength;
+                let index = Math.floor(number);
+                result += characters.charAt(index);
+            }
+            return result;
+        }
+
+        // 수정 버튼을 눌렀을 때, 기존 작성 내용을 textarea 에 전달
+        // 숨길 버튼을 숨기고, 나타낼 버튼을 나타냄
+        function editPost(id) {
+            showEdits(id);
+            let contents = $(`#${id}-contents`).text().trim();
+            $(`#${id}-textarea`).val(contents);
+        }
+
+        function showEdits(id) {
+            $(`#${id}-editarea`).show();
+            $(`#${id}-submit`).show();
+            $(`#${id}-delete`).show();
+
+            $(`#${id}-contents`).hide();
+            $(`#${id}-edit`).hide();
+        }
+
+        function hideEdits(id) {
+            $(`#${id}-editarea`).hide();
+            $(`#${id}-submit`).hide();
+            $(`#${id}-delete`).hide();
+
+            $(`#${id}-contents`).show();
+            $(`#${id}-edit`).show();
+        }
+
+
+        $(document).ready(function () {
+            // HTML 문서를 로드할 때마다 실행
+            getMessages();
+        })
+
+        // 메모를 불러와서 실행
+        function getMessages() {
+            //  기존 메모 내용을 지운다
+            //  메모 목록을 불러와서 HTML로 붙인다
+        }
+
+        // 메모 하나를 HTML로 만들어서 body 태그 내 원하는 곳
+        function addHTML(id, username, contents, modifiedAt) {
+            // HTML 태그 생성
+            // #cards-box 에 HTML
+        }
+
+        // 메모를 생성합니다.
+        function writePost() {
+            // 작성한 메모를 가져옴
+            let contents = $('#contents').val();
+            // 작성한 메모가 올바른지 isValidContents 함수를 통해 확인
+            if (isValidContents(contents) == false) {
+                return;
+            }
+            // genRandomName 함수를 통해 익명의 username을 생성
+            let username = genRandomName(10); //10자리 username이 생성
+            // 전달할 data JSON으로 생성
+            let data = {'username': username, 'contents': contents};
+            // POST /api/memos 에 data를 전달
+            $.ajax({
+                type: "POST",
+                url: "/api/memos",
+                contentType: "application/json", // JSON 형식으로 전달함을 알림
+                data: JSON.stringify(data),
+                success: function (response) { // 성공적으로 응답했을 때 응답을 response안에 넣어준다
+                    alert('메시지가 성공적으로 작성되었습니다.');
+                    window.location.reload(); //새로고침
+                }
+            });
+        }
+
+        // 메모를 수정합니다.
+        function submitEdit(id) {
+            //  작성 대상 메모의 username과 contents 를 확인
+            //  작성한 메모가 올바른지 isValidContents 함수를 통해 확인
+            //  전달할 data JSON으로 생성
+            //  PUT /api/memos/{id} 에 data를 전달합
+        }
+
+        // 메모를 삭제
+        function deleteOne(id) {
+            // DELETE /api/memos/{id} 에 요청해서 메모를 삭제
+        }
+    </script>
 </head>
 
 <body>
@@ -394,7 +344,7 @@
                 <div class="date">
                     October 10, 2020
                 </div>
-                <div class="username">
+                <div id="1-username" class="username">
                     anonymous
                 </div>
             </div>
@@ -409,9 +359,9 @@
             </div>
             <!-- 버튼 영역-->
             <div class="footer">
-                <img id="1-edit" class="icon-start-edit" src="images/edit.png" alt="" onclick="editPost('1')">
-                <img id="1-delete" class="icon-delete" src="images/delete.png" alt="" onclick="deleteOne('1')">
-                <img id="1-submit" class="icon-end-edit" src="images/done.png" alt="" onclick="submitEdit('1')">
+                <img id="1-edit" onclick="editPost('1')" class="icon-start-edit" src="images/edit.png" alt="">
+                <img id="1-delete" onclick="deleteOne('1')" class="icon-delete" src="images/delete.png" alt="">
+                <img id="1-submit" onclick="submitEdit('1')" class="icon-end-edit" src="images/done.png" alt="">
             </div>
         </div>
     </div>
