타임라인 DML 기능 생성

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -267,13 +267,58 @@
         // 메모를 불러와서 실행
         function getMessages() {
             //  기존 메모 내용을 지운다
+            $('#cards-box').empty();
             //  메모 목록을 불러와서 HTML로 붙인다
+            $.ajax({
+                type: 'GET',
+                url: '/api/memos',
+                success: function (response) {
+                    for (let i=0; i<response.length; i++) {
+                        let memo = response[i];
+                        let id = memo.id;
+                        let username = memo.username;
+                        let contents = memo.contents;
+                        let modifiedAt = memo.modifiedAt;
+                        addHTML(id, username, contents, modifiedAt)
+                    }
+                }
+
+            })
         }
 
-        // 메모 하나를 HTML로 만들어서 body 태그 내 원하는 곳
+
+        // 메모 하나를 HTML로 만들어서 body 태그 내 원하는 곳에 추가
         function addHTML(id, username, contents, modifiedAt) {
-            // HTML 태그 생성
-            // #cards-box 에 HTML
+            //HTML 태그를 만듭니다.
+            //id를 기준으로 모든게 바뀐다.
+            let tempHtml = `<div class="card">
+        <!-- date/username 영역 -->
+        <div class="metadata">
+            <div class="date">
+                ${modifiedAt}
+            </div>
+            <div id="${id}-username" class="username">
+                ${username}
+            </div>
+        </div>
+        <!-- contents 조회/수정 영역-->
+        <div class="contents">
+            <div id="${id}-contents" class="text">
+                ${contents}
+            </div>
+            <div id="${id}-editarea" class="edit">
+                <textarea id="${id}-textarea" class="te-edit" name="" id="" cols="30" rows="5"></textarea>
+            </div>
+        </div>
+        <!-- 버튼 영역-->
+        <div class="footer">
+            <img id="${id}-edit" class="icon-start-edit" src="images/edit.png" alt="" onclick="editPost('${id}')">
+            <img id="${id}-delete" class="icon-delete" src="images/delete.png" alt="" onclick="deleteOne('${id}')">
+            <img id="${id}-submit" class="icon-end-edit" src="images/done.png" alt="" onclick="submitEdit('${id}')">
+        </div>
+    </div>`;
+            //#cards-box 에 HTML을 추가
+            $('#cards-box').append(tempHtml);
         }
 
         // 메모를 생성합니다.
@@ -282,6 +327,7 @@
             let contents = $('#contents').val();
             // 작성한 메모가 올바른지 isValidContents 함수를 통해 확인
             if (isValidContents(contents) == false) {
+
                 return;
             }
             // genRandomName 함수를 통해 익명의 username을 생성
@@ -301,17 +347,43 @@
             });
         }
 
-        // 메모를 수정합니다.
+
+        // 메모를 수정
         function submitEdit(id) {
-            //  작성 대상 메모의 username과 contents 를 확인
+            //  작성 대상 메모의 id가 username과 contents 를 확인
+            let username = $(`#${id}-username`).text().trim();
+            let contents = $(`#${id}-textarea`).val().trim(); //trim 은 좌우 공백제거
+
             //  작성한 메모가 올바른지 isValidContents 함수를 통해 확인
+            if (isValidContents(contents) == false) {  //(contents)가 올바르지않다면(false) return 올바르면 밑으로간다
+                return;
+            }
             //  전달할 data JSON으로 생성
+                let data = {'username' : username, 'contents' : contents};
             //  PUT /api/memos/{id} 에 data를 전달합
+            $.ajax({
+                type : "PUT",
+                url : `api/memos/${id}`,// ` 사용 이유는 id 값이 가변적이기 때문
+                data : JSON.stringify(data),// (JSON)데이터를 넘긴다고 정의함 (일종의 송신데이터 정의)
+                contentType : 'application/json',//읽는코드가 json이다라고 정의( 이 코드 작성안할시 문자열로 취급함 ,수신데이터의미)
+                success : function (response){
+                    alert('변경이 완료되었습니다.');
+                    window.location.reload();
+                }
+            });
         }
 
         // 메모를 삭제
         function deleteOne(id) {
             // DELETE /api/memos/{id} 에 요청해서 메모를 삭제
+            $.ajax({
+                type : 'DELETE',
+                url : `/api/memos/${id}`,
+                success : function (){
+                    alert('삭제되었습니다.');
+                    window.location.reload();
+                }
+            });
         }
     </script>
 </head>
@@ -344,7 +416,7 @@
                 <div class="date">
                     October 10, 2020
                 </div>
-                <div id="1-username" class="username">
+                <div class="username">
                     anonymous
                 </div>
             </div>
